зробив оверлей в студіо

--- a/index.html
+++ b/index.html
@@ -128,21 +128,30 @@
           <h2 class="about-us">Чем мы занимаемся</h2>
           <ul class="link">
             <li class="list">
+              <div class="our-work-wrap">
               <img src="./img/img1.jpg" alt="человек печатает" width="370" />
+              <p class="our-work-top-text">Десктопные приложения</p>
+            </div>
             </li>
             <li class="list">
+              <div class="our-work-wrap">
               <img
                 src="./img/img2.jpg"
                 alt="человек держит телефон"
                 width="370"
               />
+              <p class="our-work-top-text">Мобильные приложения</p>
+            </div>
             </li>
             <li class="list">
+              <div class="our-work-wrap">
               <img
                 src="./img/img3.jpg"
                 alt="человек держит планшет"
                 width="370"
               />
+              <p class="our-work-top-text">Дизайнерские решения</p>
+            </div>
             </li>
           </ul>
         </div>
