--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="tel link"><svg class="header-icon" width="10px" height="16px">
+            <a href="tel:+38 096 111 11 11" class="tel link"><svg class="header-icon" width="10px" height="16px">
               <use href="./img2/symbol-defs.svg#icon-smartphone"></use>
             </svg>+380961111111</a>
           </li>
@@ -64,7 +64,7 @@
       <section class="business section">
         <div class="container">
           <h1 class="business-text">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn-service button-inline">
+          <button type="button" class="btn-service button-inline" data-modal-open>
             Заказать услугу
           </button>
         </div>
@@ -415,7 +415,18 @@
       </div>
     </div>
 
-    
+
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="close-btn-icon" width="18" height="18">
+            <use href="./img2/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
