--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="item">
             <a href="tel:+38 096 111 11 11" class="tel link"><svg class="header-icon" width="10px" height="16px">
               <use href="./img2/symbol-defs.svg#icon-smartphone"></use>
-            </svg>+380961111111</a>
+            </svg>+38 096 111 11 11</a>
           </li>
         </ul>
       
